--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,14 +8,14 @@ pipeline {
         PATH = "${PATH}:${getTerraformPath()}"
     }
 
-    // stages{
-    //     stage('Initial Deployment Approval') {
-    //           steps {
-    //             script {
-    //             def userInput = input(id: 'confirm', message: 'Start Pipeline?', parameters: [ [$class: 'BooleanParameterDefinition', defaultValue: false, description: 'Start Pipeline', name: 'confirm'] ])
-    //          }
-    //        }
-    //     }
+    stages{
+        stage('Initial Deployment Approval') {
+              steps {
+                script {
+                def userInput = input(id: 'confirm', message: 'Start Pipeline?', parameters: [ [$class: 'BooleanParameterDefinition', defaultValue: false, description: 'Start Pipeline', name: 'confirm'] ])
+             }
+           }
+        }
 
 
     stages{
