--- a/jenkinsfile
+++ b/jenkinsfile
@@ -50,7 +50,10 @@ pipeline {
             }
         }
     
-
+    def getTerraformPath(){
+        def tfHome= tool name: 'terraform-14', type: 'terraform'
+        return tfHome
+        }
   
 
 }
